renamed max_voxels and max_num_voxels to max_number_of_voxels

--- a/second/simple-inference.ipynb
+++ b/second/simple-inference.ipynb
@@ -150,7 +150,7 @@
     "v_path = str(root_path / v_path)\n",
     "points = np.fromfile(\n",
     "    v_path, dtype=np.float32, count=-1).reshape([-1, 4])\n",
-    "voxels, coords, num_points = voxel_generator.generate(points, max_voxels=90000)\n",
+    "voxels, coords, num_points = voxel_generator.generate(points, max_number_of_voxels=90000)\n",
     "print(voxels.shape)\n",
     "# add batch idx to coords\n",
     "coords = np.pad(coords, ((0, 0), (1, 0)), mode='constant', constant_values=0)\n",
